--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
 	"main": "src/app.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon src/app.ts"
+		"dev": "nodemon src/app.ts",
+		"db:migrate": "npx prisma migrate dev --name latest",
+		"db:reset": "npx prisma migrate reset"
 	},
 	"keywords": [],
 	"author": "",
@@ -21,6 +23,7 @@
 		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
+		"@types/node": "^18.16.3",
 		"@types/nodemon": "^1.19.2",
 		"dotenv": "^16.0.3",
 		"nodemon": "^2.0.22",
