--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
 		"bcrypt": "^5.1.0",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
+		"express-session": "^1.17.3",
 		"typescript": "^5.0.2"
 	},
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
+		"@types/express-session": "^1.17.7",
 		"@types/node": "^18.16.3",
 		"@types/nodemon": "^1.19.2",
 		"dotenv": "^16.0.3",
