--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,6 +5,7 @@
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
-		"skipLibCheck": true
+		"skipLibCheck": true,
+		"typeRoots": ["./node_modules/@types", "./src/types"]
 	}
 }
